@@ -192,6 +192,10 @@
   での論理行単位のカーソル移動がおかしくなっていました。この問題を解消
   しました。
   Thanks to lemit who reported the problem.
+* bufferからtweetを消すのをtweet削除APIが成功した後に変更
+  bufferからtweetを消去するタイミングを`destroy-status' APIが成功した
+  という応答を受け取った後に変更しました。APIが失敗に終わった場合、
+  対象tweetはbufferに残っているので再度削除を試みることができます。
 
  2.0.0: 2011-04-22
 ------------------
