@@ -200,6 +200,11 @@
   did not appear when the motion was based on display line. The bug
   has been fixed.
   Thanks to lemit who reported the problem.
+* Deletion of a tweet from a buffer after the API is succeeded.
+  A tweet is deleted from a buffer after receiving a successful
+  response of the `destroy-status' API. If the API ends in failure,
+  you can try to delete the status again because the status remains on
+  the buffer.
 
  2.0.0: 2011-04-22
 ------------------
